--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </div>
 
   <!-- Botón flotante que redirige a WhatsApp -->
-  <a href="https://prueba-usuarios-con-email.netlify.app/admin.html" target="_blank">
+  <a href="https://codigos-streamsoft.netlify.app/admin.html" target="_blank">
     <button class="floating-btn">
       <i class="fas fa-laptop"></i>
       <span>Administrar</span>
