--- a/admin.html
+++ b/admin.html
@@ -37,7 +37,7 @@
 
   <h3>Crear nuevo usuario</h3>
   <div class="form-row"><label>Usuario</label><input id="newUser" type="text" placeholder="Ej: maria123 - no crear usuarios con letras mayusculas, ni # / @"></div>
-  <div class="form-row"><label>Contraseña</label><input id="newPass" type="password" placeholder="Ej: 654123 - no crear contraseña con letras mayusculas, ni # / @""></div>
+  <div class="form-row"><label>Contraseña</label><input id="newPass" type="password" placeholder="Ej: 654123 - no crear contraseña con letras mayusculas, ni # / @"></div>
   <div class="form-row"><label>Fecha de vencimiento</label><input id="newDate" type="date"></div>
   <div class="form-row"><label>Correos permitidos (separados por coma). Si lo dejas vacío, podrá consultar cualquier correo.</label><input id="newEmails" type="text" placeholder="juan@gmail.com, andres@titani.com, pedro@gmail.com"></div>
   <button id="btnCreate" class="btn btn-green">Crear usuario</button>
